[package]
name = "coastra"
version = "1.0.0"
edition = "2021"
description = "A GUI Library for Rust."
homepage = "https://coastra.vercel.app"
repository = "https://github.com/voltageddebunked/coastra"
license-file = "LICENSE"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
name = "coastragui"

[dependencies]
conrod_core = "0.76.1"
conrod_glium = "0.76.1"
conrod_winit = "0.76.1"
glium = "0.36.0"
winit = "0.30.5"

[package.metadata]
publish = ["github"]

[registries]
github = { index = "https://github.com/rust-lang/crates.io-index" }
